# halo2-encryption

./: Cargo.toml
halo2-elgmal/: Cargo.toml
halo2-elgmal/benches/: encrypt-block.rs
halo2-elgmal/examples/: encrypt-block.rs
halo2-elgmal/src/: add_chip.rs  circuit.rs  constants.rs  lib.rs  poseidon_spec.rs
